--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -3,20 +3,22 @@
 {% block title %}{{ task.name }}{% endblock %}
 
 {% block body %}
-    <div class="page-header">
+    <div ng-cloak>
         <div class="page-header">
-            <i class="fa fa-user fa-2x"></i>
+            <h1>
+            <i class="fa fa-user"></i>
             {{ task.name }}
+            </h1>
         </div>
 
         <div class="row">
             <!--Begin of Main Task Info-->
-            <div class="col-md-6">
-                <div class="page-header">
+            <form class="col-md-6" action="{{ path('zectranet_task_edit_main_info', { 'task_id': task.id }) }}" method="post">
+                <div class="page-header" style="margin-top: 0;">
                     <span style="font-size: 20px;">Task Info</span>
                 </div>
 
-                <div class="row" style="margin-bottom: 5px;">
+                <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-3">
                         <div class="input-group">
                             <label class="text-muted  form-control-static">Name:</label>
@@ -31,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="row" style="margin-bottom: 5px;">
+                <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-3">
                         <div class="input-group">
                             <label class="text-muted form-control-static">Type:</label>
@@ -41,24 +43,43 @@
                     <div class="col-md-9">
                         <div class="input-group">
                             <select class="form-control" style="border: none;">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3" selected="selected">3</option>
+                                {% for type in task_types %}
+                                    <option style="color: {{ type.color }}" value="{{ type.id }}"
+                                            {% if type.id == task.type.id %}
+                                                selected="selected"
+                                            {% endif %}>
+                                        {{ type.label }}
+                                    </option>
+                                {% endfor %}
                             </select>
                         </div>
                     </div>
                 </div>
-            </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-header" style="margin-top: 0;"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
             <!--End of Main Task Info-->
 
             <!--Begin of Task Details-->
-            <div class="col-md-6">
+            <form class="col-md-6" action="{{ path('zectranet_task_edit_detail_info', { 'task_id': task.id }) }}" method="post">
 
-                <div class="page-header">
+                <div class="page-header" style="margin-top: 0;">
                     <span style="font-size: 20px;">Task Details</span>
                 </div>
 
-                <div class="row" style="margin-bottom: 5px;">
+                <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-3">
                         <div class="input-group">
                             <label class="text-muted form-control-static">Assigned:</label>
@@ -70,7 +91,9 @@
                             {% if task.project.users | length > 0 %}
                                 <select class="form-control" style="border: none;">
                                     {% for user in task.project.users %}
-                                        <option value="{{ user.id }}" {% if task.assigned == user %}selected="selected"{% endif %}>{{ user.name }}</option>
+                                        {% if user.id != task.owner.id %}
+                                            <option value="{{ user.id }}" {% if task.assigned == user %}selected="selected"{% endif %}>{{ user.name }}</option>
+                                        {% endif %}
                                     {% endfor %}
                                     <option {% if task.assigned == null %}selected="selected"{% endif %}>Not Assigned</option>
                                 </select>
@@ -81,28 +104,59 @@
                     </div>
                 </div>
 
+                <!-- Begin Of Task Progress Details -->
                 <div class="row">
                     <div class="col-md-3">
                         <div class="input-group">
                             <label class="text-muted  form-control-static">Progress:</label>
                         </div>
                     </div>
-
-                    <div class="col-md-8" ng-init="progress = '{{ task.progress }}'">
-                        <div class="progress progress-striped active" style="position: relative;">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="[[progress]]" aria-valuemin="0" aria-valuemax="100" style="width: [[progress]]%;">
-                                <span class="sr-only">[[progress]]% Complete (success)</span>
-                                <div class="text-muted text-center" align="center" style="color: black; font-weight: bold; position: absolute; left: 35%;">[[progress]]% Complete</div>
+                    <div ng-init="selected = '{{ task.progress }}'">
+                        <div class="col-md-6">
+                            <div style="padding: 6px 0;">
+                                <div class="form-group progress progress-striped active" style="position: relative;">
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="[[selected]]" aria-valuemin="0" aria-valuemax="100" style="width: [[selected]]%;">
+                                        <div class="text-muted text-center" align="center" style="color: black; font-weight: bold; position: absolute; left: 35%; opacity: 0.6">[[selected]]% Complete</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="input-group">
+                                <select class="form-control" ng-model="selected" style="border: none;">
+                                    <option value="0">0%</option>
+                                    <option value="10">10%</option>
+                                    <option value="20">20%</option>
+                                    <option value="30">30%</option>
+                                    <option value="40">40%</option>
+                                    <option value="50">50%</option>
+                                    <option value="60">60%</option>
+                                    <option value="70">70%</option>
+                                    <option value="80">80%</option>
+                                    <option value="90">90%</option>
+                                    <option value="100">100%</option>
+                                </select>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1">
+                </div>
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-header" style="margin-top: 0;"></div>
                     </div>
                 </div>
-            </div>
-            <!--End of Task Details-->
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Of Task Progress Details -->
+            </form>
+            <!--End of Task Details-->
         </div>
 
         <!-- Begin of Desciption Section -->
@@ -113,9 +167,14 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-12">
-                        <textarea class="form-control" style="border: none; height: 150px; resize: none;">{{ task.description }}</textarea>
-                    </div>
+                    <form class="col-md-10" action="{{ path('zectranet_task_edit_descritpion', { 'task_id': task.id }) }}" method="post">
+                        <div class="form-group">
+                            <textarea class="form-control" style="border: none; height: 150px; resize: none;">{{ task.description }}</textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default btn-primary">Save</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
